...
    count: col.stories.length,
    data: col.stories,
  }));

  return (
    <SectionList
      testID="projects-screen"
      style={styles.container}
      contentContainerStyle={styles.content}
      sections={sections}
      keyExtractor={(item) => item.story_id}
      renderSectionHeader={({ section }) => (
        <View style={styles.sectionHeader}>
...
